# explorations

./: 2026-03-22-200437-todo.txt  2026-03-22-223416-this-session-is-being-continued-from-a-previous-co.txt  2026-03-22-230930-claude-code-v2181.txt  AGENTS.md  CLAUDE.md  LICENSE  README.md  REVIEW_SUMMARY.md  VALIDATION_REPORT.md  aws-lc-sys-linker-fix.md  build.py  caveman-exploration.md  mtls-fundamentals.md  tasks.md  template.md
.agents/: exploration-agent.md  rust-revision-agent.md
11ty/: exploration.md
AppOSS/: 00-zero-to-apposs.md  README.md  exploration.md  production-grade.md  rust-revision.md  storage-system-guide.md
Apps/: exploration.md
CMS/: exploration.md
CloudHosting/: exploration.md
DataParsing/: exploration.md
HashIntel/: exploration.md
Impactjs/: exploration.md
Kobweb/: 00-zero-to-kobweb-developer.md  01-ksp-processing-routing-deep-dive.md  02-compose-html-integration-deep-dive.md  03-ssr-export-hydration-deep-dive.md  04-api-streams-backend-deep-dive.md  05-silk-ui-system-deep-dive.md  exploration.md  production-grade.md  rust-revision.md
MendableAI/: exploration.md
SQL/: exploration.md
Uploading/: exploration.md
WebEditors/: 00-zero-to-webeditors-developer.md  01-tiptap-editor-architecture-deep-dive.md  02-tiptap-extension-system-deep-dive.md  03-tldraw-canvas-engine-deep-dive.md  04-tldraw-shape-system-deep-dive.md  05-collaboration-yjs-hocuspocus-deep-dive.md  production-grade.md  rust-revision.md
Zero/: 00-zero-to-sync-engineer.md  01-zero-architecture-deep-dive.md  02-zql-ivm-deep-dive.md  03-client-deep-dive.md  04-server-services-deep-dive.md  05-valtron-integration.md  05-zero-virtual-deep-dive.md  06-fractional-indexing-deep-dive.md  exploration.md  production-grade.md  rust-revision.md
[src.WebTransport]/: build.py  task.md
[src.iii]/: build.py
[src.strukto-ai]/: build.py
agentfs/: 03-platform-fuse-implementation-deep-dive.md  04-overlayfs-and-syscall-interception-deep-dive.md  exploration.md  fuse-integration-deep-dive.md  fuse-integration-guide.md
alchemy/: 00-zero-to-deploy-engineer.md  01-distilled-api-specs-deep-dive.md  02-provider-integration-deep-dive.md  03-core-architecture-deep-dive.md  03-resource-lifecycle-deep-dive.md  04-state-management-deep-dive.md  05-valtron-integration.md  README.md  exploration.md  production-grade.md  rust-revision.md
amphtml/: exploration.md
animation-libraries-comparison/: comparison.md
anyproto/: exploration.md
ash/: api-layer-deep-dive.md  ash-core-deep-dive.md  data-layer-deep-dive.md  exploration.md  extensions-deep-dive.md  reactor-deep-dive.md  rust-revision.md
astro/: exploration.md
auggie/: exploration.md
augment-agent/: exploration.md
augment-swebench-agent/: exploration.md
augmentcode-context-engine/: context-engine-page.html  deep-dive.md
auto-ssl/: README.md  exploration.md  rust-revision.md  tasks.md
auto-ssl/examples/cert-manager/: Cargo.toml
auto-ssl/examples/cert-manager/src/: main.rs
auto-ssl/examples/embedded-server/: Cargo.toml
auto-ssl/examples/embedded-server/src/: main.rs
auto-ssl/examples/standalone-manager/: Cargo.toml
auto-ssl/examples/standalone-manager/src/: main.rs
automerge/: exploration.md
autoresearch/: spec.md
backtrace/: 00-zero-to-backtrace-developer.md  01-stack-unwinding-deep-dive.md  02-symbol-resolution-deep-dive.md  03-source-mapping-deep-dive.md  04-crash-reporting-deep-dive.md  05-performance-profiling-deep-dive.md  production-grade.md  rust-revision.md
basecamp/: exploration.md
better-auth/: CLOUDFLARE_DEPLOYMENT.md  DATABASE_SCHEMA.md  JWT_SESSIONS.md  OAUTH_IMPLEMENTATION.md  OAUTH_PROVIDERS_DEEP_DIVE.md  README.md  RUST_REVISION_PLAN.md  WASM_DEEP_DIVE.md  exploration.md
bettercontext/: ai-sdk-ex.md  bettercontextoai.md  btca-core.md  exploration.md  grep-bench.md  r8y.md  river.md  rust-revision.md  search-ex.md
boxer/: 00-zero-to-boxer-engineer.md  01-boxing-patterns-deep-dive.md  02-wasm-compatibility-deep-dive.md  03-performance-deep-dive.md  04-macro-system-deep-dive.md  05-valtron-integration.md  exploration.md  production-grade.md  rust-revision.md
bubbletea/: 00-zero-to-tui-engineer.md  01-elm-architecture-deep-dive.md  02-rendering-pipeline-deep-dive.md  03-tea-executor-deep-dive.md  04-bubbletea-components-deep-dive.md  05-valtron-integration.md  exploration.md  production-grade.md  rust-revision.md
caddy/: automatic-https-deep-dive.md  caddy-exploration.md  certmagic-exploration.md  exploration.md  rust-revision.md
cbor/: 00-zero-to-serialization-engineer.md  01-cbor-data-model-deep-dive.md  02-schema-validation-deep-dive.md  exploration.md  (+5 more)
dst-with-hissi/examples/io-dispatcher/: Cargo.toml
dst-with-hissi/examples/io-dispatcher/src/: main.rs
dst-with-hissi/examples/rawconn-traits/: Cargo.toml
dst-with-hissi/examples/rawconn-traits/src/: main.rs
dst-with-hissi/examples/simulation-kernel/: Cargo.toml
dst-with-hissi/examples/simulation-kernel/src/: main.rs
rust-mtls/examples/certgen/: Cargo.toml
rust-mtls/examples/certgen/src/: main.rs
rust-mtls/examples/client/: Cargo.toml
rust-mtls/examples/client/src/: main.rs
rust-mtls/examples/server/: Cargo.toml
rust-mtls/examples/server/src/: main.rs
(+3315 files in other folders)
