[package]
name = "auto-ssl-cert-manager"
version = "0.1.0"
edition = "2021"
description = "Certificate manager with S3/R2 storage"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
acme2 = "0.10"
rcgen = "0.13"
x509-parser = "0.17"
rustls-pemfile = "2"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
async-trait = "0.1"
md5 = "0.7"
