[package]
name = "auto-ssl-standalone-manager"
version = "0.1.0"
edition = "2021"
description = "Standalone Auto-SSL certificate manager"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
acme2 = "0.10"
rcgen = "0.13"
x509-parser = "0.17"
rustls-pemfile = "2"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "5"
