[package]
name = "dst-io-dispatcher-example"
version = "0.1.0"
edition = "2021"
description = "Example: Hiisi-style I/O dispatcher pattern"

[dependencies]
bytes = "1.5"
socket2 = { version = "0.5", features = ["all"] }
polling = "3.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
log = "0.4"
thiserror = "2"
