[package]
name = "dst-rawconn-example"
version = "0.1.0"
edition = "2021"
description = "Example: RawConn trait abstraction"

[dependencies]
foundation_core = { path = "../../../foundation_core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
