[package]
name = "dst-simulation-kernel-example"
version = "0.1.0"
edition = "2021"
description = "Example: Deterministic simulation kernel"

[dependencies]
bytes = "1.5"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
log = "0.4"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
