[package]
name = "mtls-certgen"
version = "0.1.0"
edition = "2021"
description = "Certificate generation utility for mTLS testing"

[dependencies]
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"
