[package]
name = "mtls-client-example"
version = "0.1.0"
edition = "2021"
description = "Example mTLS HTTP client implementation"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rustls-pemfile = "2"
