[package]
name = "mtls-server-example"
version = "0.1.0"
edition = "2021"
description = "Example mTLS server implementation"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rustls-pemfile = "2"
rcgen = "0.13"
x509-parser = "0.17"
